fixed the flex-row autowrap

--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ header div {
 	margin: 2rem;
 	margin-top: 4rem;
 }
-#main div {
+#main > div {
 	padding: 1.7rem;
 }
 #content {
@@ -161,7 +161,7 @@ header div {
 }
 .flex-row * {
 	flex: 1;
-	padding: .5rem;
+	padding: .3rem;
 }
 .flex-column {
 	display: flex;
@@ -174,12 +174,7 @@ header div {
 .flex-column * {
 	flex: 1;
 }
-/* img {
-	width: auto;
-	height: auto;
-	max-width: 100%;
-	max-height: 100%;
-} */
+
 h1 {
 	font-size: 3rem;
 	color: black;
@@ -205,7 +200,9 @@ footer {
 footer span {
 	margin: 0 .3rem;
 }
-
+img {
+	display: block;
+}
 .preload * {
 	-webkit-transition: none !important;
 	-moz-transition: none !important;
